# solana-transference

./: .eslintrc.json  .gitignore  .gitpod.yml  .mergify.yml  .travis.yml  cluster-mainnet-beta.env  cluster-testnet.env  package-lock.json  package.json  tsconfig.json
src/client/: main.ts  transference.ts  utils.ts
src/program/: Cargo.toml
src/program/src/: lib.rs
