[package]
name = "solana"
version = "0.0.1"
description = "Example template program written in Rust"
license = "MIT"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.10.2"

[dev-dependencies]
solana-program-test = "1.10.2"
solana-sdk = "1.10.2"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]